Bug 38450 - [4.4 Regression] ada bootstrap is broken
Summary: [4.4 Regression] ada bootstrap is broken
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: ada (show other bugs)
Version: 4.4.0
: P3 normal
Target Milestone: 4.4.0
Assignee: Jakub Jelinek
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-12-09 02:49 UTC by John David Anglin
Modified: 2008-12-23 19:35 UTC (History)
1 user (show)

See Also:
Host: i686-apple-darwin9
Target: i686-apple-darwin9
Build: i686-apple-darwin9
Known to work:
Known to fail:
Last reconfirmed: 2008-12-09 08:56:03


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description John David Anglin 2008-12-09 02:49:21 UTC
gcc -c  -g -fkeep-inline-functions -DIN_GCC   -W -Wall -Wwrite-strings -Wstrict-
prototypes -Wmissing-prototypes -Wcast-qual   -fno-common  -DHAVE_CONFIG_H -I.. 
-I. -Iada -I../../gcc/gcc -I../../gcc/gcc/ada -I../../gcc/gcc/../include -I../..
/gcc/gcc/../libcpp/include  -I../../gcc/gcc/../libdecnumber -I../../gcc/gcc/../l
ibdecnumber/dpd -I../libdecnumber    ../../gcc/gcc/ada/gcc-interface/decl.c -o a
da/decl.o
gcc -c  -g -fkeep-inline-functions -DIN_GCC   -W -Wall -Wwrite-strings -Wstrict-
prototypes -Wmissing-prototypes -Wcast-qual   -fno-common  -DHAVE_CONFIG_H -I.. 
-I. -Iada -I../../gcc/gcc -I../../gcc/gcc/ada -I../../gcc/gcc/../include -I../..
/gcc/gcc/../libcpp/include  -I../../gcc/gcc/../libdecnumber -I../../gcc/gcc/../l
ibdecnumber/dpd -I../libdecnumber    ../../gcc/gcc/ada/gcc-interface/misc.c -o a
da/misc.o
../../gcc/gcc/ada/gcc-interface/decl.c: In function 'gnat_to_gnu_entity':
../../gcc/gcc/ada/gcc-interface/decl.c:2035: error: lvalue required as left oper
and of assignment
../../gcc/gcc/ada/gcc-interface/decl.c:2876: error: lvalue required as left oper
and of assignment
../../gcc/gcc/ada/gcc-interface/decl.c: In function 'make_aligning_type':
../../gcc/gcc/ada/gcc-interface/decl.c:5575: error: lvalue required as left oper
and of assignment
make[3]: *** [ada/decl.o] Error 1
make[3]: *** Waiting for unfinished jobs....

142549 was ok.
Comment 1 John David Anglin 2008-12-09 02:56:57 UTC
All the errors are lines like:

  TYPE_MODE (record_type) = BLKmode;

Probably caused by:

2008-12-08  Richard Henderson  <rth@redhat.com>

        PR 38240
        * tree.h (TYPE_MODE): Invoke vector_type_mode when needed.
        (SET_TYPE_MODE): New.
Comment 2 Jakub Jelinek 2008-12-09 08:56:03 UTC
Testing a fix.
Comment 3 Jakub Jelinek 2008-12-09 10:36:39 UTC
Subject: Bug 38450

Author: jakub
Date: Tue Dec  9 10:35:15 2008
New Revision: 142588

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=142588
Log:
	PR ada/38450
	* gcc-interface/utils.c (finish_record_type): Use SET_TYPE_MODE.
	* gcc-interface/decl.c (gnat_to_gnu_entity, make_aligning_type):
	Likewise.

Modified:
    trunk/gcc/ada/ChangeLog
    trunk/gcc/ada/gcc-interface/decl.c
    trunk/gcc/ada/gcc-interface/utils.c

Comment 4 Jakub Jelinek 2008-12-09 13:44:45 UTC
Fixed.